--- a/.github/workflows/daily-e2e-robotrun.yml
+++ b/.github/workflows/daily-e2e-robotrun.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Install python dependencies
       run: |
         python -m pip install --upgrade pip
@@ -18,8 +18,13 @@ jobs:
     - name: Execute E2E tests (Robot Framework)
       env:
         OTP_SECRET_WOO: ${{ secrets.OTP_SECRET_WOO }}
-        USERNAME_WOO: ${{ secrets.USERNAME_WOO }}
-        PASSWORD_WOO: ${{ secrets.PASSWORD_WOO }}
+        USERNAME_WOO_STAGING: ${{ secrets.USERNAME_WOO_STAGING }}
+        PASSWORD_WOO_STAGING: ${{ secrets.PASSWORD_WOO_STAGING }}
+        USERNAME_WOO_TEST: ${{ secrets.USERNAME_WOO_TEST }}
+        PASSWORD_WOO_TEST: ${{ secrets.PASSWORD_WOO_TEST }}
+        EMAIL_WOO_TEST_BALIE: ${{ secrets.EMAIL_WOO_TEST_BALIE }}
+        PASSWORD_WOO_TEST_BALIE: ${{ secrets.PASSWORD_WOO_TEST_BALIE }}
+        SECRET_WOO_TEST_BALIE: ${{ secrets.SECRET_WOO_TEST_BALIE }}
       run: |
         python -m robot -d tests/robot_framework/results -x outputxunit.xml -i E2E -e LOGS -v headless:true tests/robot_framework
     - name: Upload test results
