--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -10,7 +10,7 @@ jobs:
   composer-install:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/cache@v3
         with:
           path: vendor/
@@ -22,7 +22,9 @@ jobs:
           php-version: ${{ matrix.php-versions }}
           extensions: zip
       - name: Install Dependencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+        env:
+           COMPOSER_AUTH: '{"github-oauth": {"github.com": "${{ secrets.REPO_READ_ONLY_TOKEN }}"}}'
+        run: composer install  --no-interaction --no-scripts --no-progress --prefer-dist
     strategy:
       max-parallel: 3
       matrix:
@@ -33,7 +35,7 @@ jobs:
       - composer-install
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/cache@v3
         with:
           path: vendor/
@@ -59,7 +61,7 @@ jobs:
       - composer-install
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/cache@v3
         with:
           path: vendor/
@@ -76,12 +78,34 @@ jobs:
       matrix:
         php-versions: [ '8.1', '8.2' ]
 
+  php-linting-phpcsfixer:
+    needs:
+      - composer-install
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/cache@v3
+        with:
+          path: vendor/
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+      - name: Install PHP
+        uses: shivammathur/setup-php@master
+        with:
+          php-version: ${{ matrix.php-versions }}
+      - name: PHP CS Fixer
+        run: vendor/bin/php-cs-fixer fix --dry-run --diff --verbose
+    strategy:
+      max-parallel: 3
+      matrix:
+        php-versions: [ '8.1', '8.2' ]
+
   php-linting-phpmd:
     needs:
       - composer-install
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/cache@v3
         with:
           path: vendor/
@@ -103,7 +127,7 @@ jobs:
       - composer-install
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/cache@v3
         with:
           path: vendor/
@@ -127,34 +151,12 @@ jobs:
       matrix:
         php-versions: [ '8.1', '8.2' ]
 
-  php-security-check:
-    needs:
-      - composer-install
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/cache@v3
-        with:
-          path: vendor/
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-composer-
-      - name: Install PHP
-        uses: shivammathur/setup-php@master
-        with:
-          php-version: ${{ matrix.php-versions }}
-      - name: Local PHP Security Checker
-        uses: docker://pplotka/local-php-security-checker-github-actions
-    strategy:
-      max-parallel: 3
-      matrix:
-        php-versions: [ '8.1', '8.2' ]
-
   php-linting-twig:
     needs:
       - composer-install
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/cache@v3
         with:
           path: vendor/
@@ -174,6 +176,39 @@ jobs:
           bin/console cache:clear
           bin/console cache:warmup
           bin/console lint:twig templates
+        env:
+          APP_ENV: prod
+          APP_DEBUG: false
+    strategy:
+      max-parallel: 3
+      matrix:
+        php-versions: [ '8.1', '8.2' ]
+
+  php-linting-translations:
+    needs:
+      - composer-install
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/cache@v3
+        with:
+          path: vendor/
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+      - name: Install PHP
+        uses: shivammathur/setup-php@master
+        with:
+          php-version: ${{ matrix.php-versions }}
+      - name: copy env file
+        run: |
+          cp .env.ci .env.local
+          # change database url to sqlite
+          sed -i 's|^DATABASE_URL=.*|DATABASE_URL=sqlite:///%kernel.project_dir%/var/data.db|' .env.local
+      - name: Twig linter
+        run: |
+          bin/console cache:clear
+          bin/console cache:warmup
+          bin/console lint:yaml translations
         env:
           APP_ENV: prod
           APP_DEBUG: false
