--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "sonarlint.connectedMode.project": {
         "connectionId": "vws",
-        "projectKey": "nl-rdo-woo-web-private"
+        "projectKey": "nl-rdo-woo-web"
     }
 }
